tests/fail/file_constructor--TypeError.py
"""The constructor for 'file' should not work to open a file."""
_ = file('README', 'r')
